fix image overflow

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,5 +1,8 @@
 .FooterStyles {
-  a, a:hover, a:visited, a:active {
+  a,
+  a:hover,
+  a:visited,
+  a:active {
     color: inherit;
     text-decoration: none;
   }
